// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components-pro/check-box/demo/basic.md correctly 1`] = `
<div>
  <label
    class="c7n-pro-checkbox-wrapper"
  >
    <input
      checked=""
      class="c7n-pro-checkbox"
      name="base"
      type="checkbox"
      value="A"
    />
    <i
      class="c7n-pro-checkbox-inner"
    />
    <span
      class="c7n-pro-checkbox-label"
    >
      A
    </span>
  </label>
  <span />
  <label
    class="c7n-pro-checkbox-wrapper"
  >
    <input
      class="c7n-pro-checkbox"
      name="base"
      type="checkbox"
      value="B"
    />
    <i
      class="c7n-pro-checkbox-inner"
    />
    <span
      class="c7n-pro-checkbox-label"
    >
      B
    </span>
  </label>
  <span />
  <label
    class="c7n-pro-checkbox-wrapper"
  >
    <input
      class="c7n-pro-checkbox"
      name="base"
      type="checkbox"
      value="C"
    />
    <i
      class="c7n-pro-checkbox-inner"
    />
    <span
      class="c7n-pro-checkbox-label"
    >
      C
    </span>
  </label>
  <span />
  <label
    class="c7n-pro-checkbox-wrapper"
  >
    <input
      class="c7n-pro-checkbox"
      name="base"
      type="checkbox"
      value="C"
    />
    <i
      class="c7n-pro-checkbox-inner"
    />
    <span
      class="c7n-pro-checkbox-label"
    >
      C
    </span>
  </label>
  <span />
</div>
`;

exports[`renders ./components-pro/check-box/demo/button.md correctly 1`] = `
<div>
  <label
    class="c7n-pro-checkbox-wrapper c7n-pro-checkbox-button"
  >
    <input
      checked=""
      class="c7n-pro-checkbox"
      name="base"
      type="checkbox"
      value="A"
    />
    <i
      class="c7n-pro-checkbox-inner"
    />
    <span
      class="c7n-pro-checkbox-label"
    >
      A
    </span>
  </label>
  <span />
  <label
    class="c7n-pro-checkbox-wrapper c7n-pro-checkbox-button"
  >
    <input
      class="c7n-pro-checkbox"
      name="base"
      type="checkbox"
      value="B"
    />
    <i
      class="c7n-pro-checkbox-inner"
    />
    <span
      class="c7n-pro-checkbox-label"
    >
      B
    </span>
  </label>
  <span />
  <label
    class="c7n-pro-checkbox-wrapper c7n-pro-checkbox-button"
  >
    <input
      class="c7n-pro-checkbox"
      name="base"
      type="checkbox"
      value="C"
    />
    <i
      class="c7n-pro-checkbox-inner"
    />
    <span
      class="c7n-pro-checkbox-label"
    >
      C
    </span>
  </label>
  <span />
</div>
`;

exports[`renders ./components-pro/check-box/demo/controlled.md correctly 1`] = `
<div>
  <label
    class="c7n-pro-checkbox-wrapper"
  >
    <input
      checked=""
      class="c7n-pro-checkbox"
      name="controlled"
      type="checkbox"
      value="A"
    />
    <i
      class="c7n-pro-checkbox-inner"
    />
    <span
      class="c7n-pro-checkbox-label"
    >
      A
    </span>
  </label>
  <span />
  <label
    class="c7n-pro-checkbox-wrapper"
  >
    <input
      class="c7n-pro-checkbox"
      name="controlled"
      type="checkbox"
      value="B"
    />
    <i
      class="c7n-pro-checkbox-inner"
    />
    <span
      class="c7n-pro-checkbox-label"
    >
      B
    </span>
  </label>
  <span />
  <label
    class="c7n-pro-checkbox-wrapper"
  >
    <input
      class="c7n-pro-checkbox"
      name="controlled"
      type="checkbox"
      value="C"
    />
    <i
      class="c7n-pro-checkbox-inner"
    />
    <span
      class="c7n-pro-checkbox-label"
    >
      C
    </span>
  </label>
  <span />
</div>
`;

exports[`renders ./components-pro/check-box/demo/dataset.md correctly 1`] = `
<div>
  <label
    class="c7n-pro-checkbox-wrapper"
  >
    <input
      checked=""
      class="c7n-pro-checkbox"
      name="bind"
      type="checkbox"
      value="A"
    />
    <i
      class="c7n-pro-checkbox-inner"
    />
    <span
      class="c7n-pro-checkbox-label"
    >
      A
    </span>
  </label>
  <span />
  <label
    class="c7n-pro-checkbox-wrapper"
  >
    <input
      class="c7n-pro-checkbox"
      name="bind"
      type="checkbox"
      value="B"
    />
    <i
      class="c7n-pro-checkbox-inner"
    />
    <span
      class="c7n-pro-checkbox-label"
    >
      B
    </span>
  </label>
  <span />
  <label
    class="c7n-pro-checkbox-wrapper"
  >
    <input
      class="c7n-pro-checkbox"
      name="bind"
      type="checkbox"
      value="C"
    />
    <i
      class="c7n-pro-checkbox-inner"
    />
    <span
      class="c7n-pro-checkbox-label"
    >
      C
    </span>
  </label>
  <span />
  <label
    class="c7n-pro-checkbox-wrapper"
  >
    <input
      class="c7n-pro-checkbox"
      name="bind2"
      type="checkbox"
      value="true"
    />
    <i
      class="c7n-pro-checkbox-inner"
    />
  </label>
  <span />
  <label
    class="c7n-pro-checkbox-wrapper"
  >
    <input
      class="c7n-pro-checkbox"
      name="bind3"
      type="checkbox"
      value="Y"
    />
    <i
      class="c7n-pro-checkbox-inner"
    />
    <span
      class="c7n-pro-checkbox-label"
    >
      是否展开
    </span>
  </label>
  <span />
</div>
`;

exports[`renders ./components-pro/check-box/demo/readonly.md correctly 1`] = `
<div>
  <label
    class="c7n-pro-checkbox-wrapper c7n-pro-checkbox-disabled"
  >
    <input
      class="c7n-pro-checkbox"
      disabled=""
      name="rd"
      type="checkbox"
      value="true"
    />
    <i
      class="c7n-pro-checkbox-inner"
    />
    <span
      class="c7n-pro-checkbox-label"
    >
      A
    </span>
  </label>
  <span />
  <label
    class="c7n-pro-checkbox-wrapper c7n-pro-checkbox-readonly"
  >
    <input
      class="c7n-pro-checkbox"
      name="rd"
      type="checkbox"
      value="true"
    />
    <i
      class="c7n-pro-checkbox-inner"
    />
    <span
      class="c7n-pro-checkbox-label"
    >
      B
    </span>
  </label>
  <span />
  <label
    class="c7n-pro-checkbox-wrapper c7n-pro-checkbox-readonly"
  >
    <input
      checked=""
      class="c7n-pro-checkbox"
      name="rd"
      type="checkbox"
      value="C"
    />
    <i
      class="c7n-pro-checkbox-inner"
    />
    <span
      class="c7n-pro-checkbox-label"
    >
      C
    </span>
  </label>
  <span />
</div>
`;
